--- a/XEN/assets/css/style.css
+++ b/XEN/assets/css/style.css
@@ -3102,11 +3102,17 @@ body,
 
 /* 6.1. Bg colors */
 .light-bg-1 {
-	background: #7800FE; 
+	background: white; 
 }
 
 .light-bg-2 {
 	background: #7800FE;
+}
+.light-bg-3{
+	background: #EED8FF;
+}
+.light-bg-4{
+	background: #FFE0F2;
 }
 
 .dark-bg-1 {
@@ -3119,6 +3125,14 @@ body,
 
 .red-bg {
 	background: #7800fe;
+}
+
+.hover:hover{
+	color: #E13499;
+	transition: 0.4s ease-in-out;
+}
+.ml-2{
+	margin-left: 15px;
 }
 
 /* 6.2. Text colors */
@@ -3784,7 +3798,7 @@ body,
   	width: 1px;
   	height: calc(100% + 2px);
   	content: '';
-  	background: #E13499;
+  	background: white;
   	top: -1px;
   	right: -1px;
   	-webkit-transition: 0.5s cubic-bezier(.76, .06, .85, .07);
@@ -3861,7 +3875,7 @@ body,
 }
 
 .border-btn:after {
-	color: #E13499;
+	color: white;
 	-webkit-transform: translateY(-50%) translateX(30px);
 	    -ms-transform: translateY(-50%) translateX(30px);
 	        transform: translateY(-50%) translateX(30px);
@@ -3912,7 +3926,7 @@ body,
 }
 
 .border-btn-red.border-btn-box {
-  	border: 1px solid #E13499;
+  	border: 1px solid white;
 }
 
 .border-btn-red.border-btn-box:before,
@@ -3924,7 +3938,7 @@ body,
 
 .border-btn-red .border-btn:before,
 .border-btn-red .border-btn:after {
-	color: #E13499;
+	color: white;
 }
 
 .border-btn-red .border-btn:after {
@@ -3969,7 +3983,7 @@ body,
 
 .flip-btn:before,
 .flip-btn:after {
-	color: #262626;
+	color: #7800FE;
 	content: attr(data-text);
 	position: absolute;
 	top: 50%;
@@ -5055,7 +5069,7 @@ body.anim .load-title-fill:after {
 	width: 100;
 }
 .title-fill:after {
-	color: #E13499;
+	color: white;
 	background: #f5f5f5;
 	-webkit-transition-delay: .3s;
 	    -o-transition-delay: .3s;
@@ -5993,8 +6007,13 @@ button.mfp-close {
 	        transition-delay: 1s;
 }
 
+.size-3{
+	font-size: 18px;
+	letter-spacing: 3px;
+}
+
 .slider-title-fill:after {
-	color: #E13499;
+	color: white;
 	background: #f5f5f5;
 	-webkit-transition-delay: 1.3s;
 	    -o-transition-delay: 1.3s;
@@ -6088,6 +6107,149 @@ button.mfp-close {
 }
 
 .slider-tr-delay10.slider-title-fill:after {
+	-webkit-transition-delay: 2.3s !important;
+	    -o-transition-delay: 2.3s !important;
+	        transition-delay: 2.3s !important;
+}
+/* title-fill-2
+/* 15.1.1. Home slider title fill effect */
+.slider-title-fill-2 {
+	font-size: .75em;
+	white-space: nowrap;
+	color: transparent;
+	position: relative;
+	display: inline-block;
+}
+
+.swiper-slide-active .slider-title-fill-2:after {
+	width: 0%; /* Animate to reveal the text */
+  }
+
+.slider-title-fill-2:before,
+.slider-title-fill-2:after {
+	content: attr(data-text);
+	position: absolute;
+	top: 50%;
+	color: #E13499;
+	-webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	        transform: translateY(-50%);
+	left: 0;
+	-webkit-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
+		-o-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
+			transition: 1s cubic-bezier(.767, .01, .18, 1.01);
+	width: 0%;
+	white-space: nowrap;
+	overflow: hidden;
+	-webkit-transition-delay: 1s;
+	    -o-transition-delay: 1s;
+	        transition-delay: 1s;
+}
+
+.slider-title-fill-2:after {
+	color: #FFE0F2;
+	background: #E13499;
+	background-color: #E13499; /* Or any desired background color */
+	width: 100%; /* Initially cover the entire text */
+	z-index: 1; /* Ensure it's on top */
+	-webkit-transition-delay: 1.3s;
+	    -o-transition-delay: 1.3s;
+	        transition-delay: 1.3s;
+}
+
+.swiper-slide-active .slider-title-fill-2:before,
+.swiper-slide-active .slider-title-2:after {
+	width: 100%;
+}
+
+
+
+.dark-bg-1 .slider-title-fill-2:before,
+.dark-bg-2 .slider-title-fill-2:before {
+	color: white;
+}
+
+.red-bg .slider-title-fill-2:before {
+	color: #262626;
+}
+
+.light-bg-2 .slider-title-fill-2:after {
+	background: #f0f0f0;
+}
+.light-bg-4 .slider-title-fill-2:before {
+	background: transparent;
+}
+
+.dark-bg-1 .slider-title-fill-2:after {
+	background: transparent;
+}
+
+.dark-bg-2 .slider-title-fill-2:after {
+	background: transparent;
+}
+
+.red-bg .slider-title-fill-2:after {
+	background: #E13499;
+}
+.light-bg-4 .slider-title-fill-2:after {
+	background: #E13499;
+}
+
+.slider-tr-delay01.slider-title-fill-2:after {
+	-webkit-transition-delay: 1.4s !important;
+	    -o-transition-delay: 1.4s !important;
+	        transition-delay: 1.4s !important;
+}
+
+.slider-tr-delay02.slider-title-fill-2:after {
+	-webkit-transition-delay: 1.5s !important;
+	    -o-transition-delay: 1.5s !important;
+	        transition-delay: 1.5s !important;
+}
+
+.slider-tr-delay03.slider-title-fill-2:after {
+	-webkit-transition-delay: 1.6s !important;
+	    -o-transition-delay: 1.6s !important;
+	        transition-delay: 1.6s !important;
+}
+
+.slider-tr-delay04.slider-title-fill-2:after {
+	-webkit-transition-delay: 1.7s !important;
+	    -o-transition-delay: 1.7s !important;
+	        transition-delay: 1.7s !important;
+}
+
+.slider-tr-delay05.slider-title-fill-2:after {
+	-webkit-transition-delay: 1.8s !important;
+	    -o-transition-delay: 1.8s !important;
+	        transition-delay: 1.8s !important;
+}
+
+.slider-tr-delay06.slider-title-fill-2:after {
+	-webkit-transition-delay: 1.9s !important;
+	    -o-transition-delay: 1.9s !important;
+	        transition-delay: 1.9s !important;
+}
+
+.slider-tr-delay07.slider-title-fill-2:after {
+	-webkit-transition-delay: 2s !important;
+	    -o-transition-delay: 2s !important;
+	        transition-delay: 2s !important;
+}
+
+.slider-tr-delay08.slider-title-fill-2:after {
+	-webkit-transition-delay: 2.1s !important;
+	    -o-transition-delay: 2.1s !important;
+	        transition-delay: 2.1s !important;
+}
+
+.slider-tr-delay09.slider-title-fill-2:after {
+	-webkit-transition-delay: 2.2s !important;
+	    -o-transition-delay: 2.2s !important;
+	        transition-delay: 2.2s !important;
+}
+
+.slider-tr-delay10.slider-title-fill-2:after {
 	-webkit-transition-delay: 2.3s !important;
 	    -o-transition-delay: 2.3s !important;
 	        transition-delay: 2.3s !important;
@@ -6294,7 +6456,9 @@ button.mfp-close {
 	width: 250px;
 	
 }
-
+.thin{
+	font-weight: 300;
+}
 .testimonials-content p {
 	margin-top: 0;
 	text-align: justify;
@@ -6303,7 +6467,7 @@ button.mfp-close {
 .testimonials-content {
 	padding: 20px;
 	margin: 42px 0 30px 0;
-	background: #E13499;
+	background: #01c4cb;
 	position: relative;
 }
 
@@ -7755,10 +7919,10 @@ body.out .swiper-slide-active .portfolio-slider-fade {
 
 .image-fit {
     position: absolute;
-    top: 0;
+    top: 10%;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 70%;
     object-fit: contain;
 }
 .portfolio-content h2 span,
