--- a/XEN/assets/css/style.css
+++ b/XEN/assets/css/style.css
@@ -6526,15 +6526,27 @@ width: 100%;
 	display: flex;
 	flex-direction: column;
 }
+.s-m-t {
+	text-transform: uppercase;
+	font-size: 14px;
+	line-height: 1.4;
+	font-weight: 600;
+	letter-spacing: 0px;
+	font-family: 'Oswald', sans-serif;
+}
 .pad-20{
 	padding: 15px;
 }
 .pad-10{
 	padding: 8px;
 }
+.h{
+	height: 30px;
+	width: 30px;
+}
 
 .m-t{
-	font-size: 30px;
+	font-size: 20px;
 }
 .c-mb-10{
 	margin-top: -30px;
@@ -6547,6 +6559,15 @@ width: 100%;
 	flex-direction: row;
 }
 
+.d-f-w{
+	display: flex;
+	justify-content: space-between; /* Add spacing between items */
+}
+.d-grid {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr); /* Creates 4 equal-width columns */
+  }
+
 .d-f-c-c{
 	display: flex;
 	flex-direction: column;
@@ -6556,7 +6577,7 @@ width: 100%;
 }
 .f-r{
 	flex-direction: row;
-	flex-wrap: nowrap;
+	
 }
 .ml-10{
 	margin-left: 10px;
@@ -6565,6 +6586,7 @@ width: 100%;
 	font-size: 15px;
 	color: rgba(255, 255, 255, 0.784);
 }
+
 
 .b{
 	border: rgba(255, 255, 255, 0.216) 4px solid;
@@ -6607,33 +6629,45 @@ width: 100%;
 	.t-l{
 		text-align: center;
 	}
-	.f-r{
-		flex-direction: column;
-	}
-	.small-title-oswald{
+	.d-grid {
+		grid-template-columns: repeat(2, 1fr);
+	  }
+	.s-m-t{
 		font-size: 30px;
 	}
 	.p-style{
-		font-size: 18px;
+		font-size: 14px;
 	}
 	.d-f{
 		flex-direction: column;
 	}
+	.d-f-w {
+		flex-wrap: wrap; 
+	  }
+	.medium-title-oswald{
+		font-size: 18px;
+	}
+	
 	
 }
 @media only screen and (max-width: 900px) {
 		
 
-	.f-r{
-		flex-direction: column;
-	}
-	.small-title-oswald{
+	.d-grid {
+		grid-template-columns: repeat(2, 1fr);
+	  }
+	.s-m-t{
 		font-size: 30px;
 	}
 	.p-style{
 		font-size: 18px;
 	}
-	
+	.d-f-w {
+		flex-wrap: wrap; 
+	}
+	.medium-title-oswald{
+		font-size: 22px;
+	}
 		
 }
 
@@ -6656,19 +6690,24 @@ width: 100%;
 	.t-l{
 		text-align: center;
 	}
-	.f-r{
-		flex-direction: column;
-	}
-	.small-title-oswald{
+	.d-grid {
+		grid-template-columns: repeat(2, 1fr);
+	  }
+	.s-m-t{
 		font-size: 30px;
 	}
 	.p-style{
-		font-size: 18px;
+		font-size: 14px;
 	}
 	.d-f{
 		flex-direction: column;
 	}
-	
+	.d-f-w {
+		flex-wrap: wrap; 
+	  }
+	  .medium-title-oswald{
+		font-size: 18px;
+	}
 		
 }
 
