--- a/XEN/assets/css/style.css
+++ b/XEN/assets/css/style.css
@@ -3360,6 +3360,14 @@ body,
 	letter-spacing: 0px;
 	font-family: 'Oswald', sans-serif;
 }
+.xmedium-title-oswald {
+	text-transform: uppercase;
+	font-size: 36px;
+	line-height: 1.4;
+	font-weight: 600;
+	letter-spacing: 0px;
+	font-family: 'Oswald', sans-serif;
+}
 
 .xsmall-title-oswald {
 	text-transform: uppercase;
@@ -6636,7 +6644,7 @@ width: 100%;
 		font-size: 30px;
 	}
 	.p-style{
-		font-size: 14px;
+		font-size: 12px;
 	}
 	.d-f{
 		flex-direction: column;
@@ -6645,7 +6653,13 @@ width: 100%;
 		flex-wrap: wrap; 
 	  }
 	.medium-title-oswald{
-		font-size: 18px;
+		font-size: 15px;
+	}
+	.f-r{
+		flex-direction: column;
+	}
+	.xmedium-title-oswald{
+		font-size: 25px;
 	}
 	
 	
@@ -6667,6 +6681,12 @@ width: 100%;
 	}
 	.medium-title-oswald{
 		font-size: 22px;
+	}
+	.xmedium-title-oswald{
+		font-size: 25px;
+	}
+	.f-r{
+		flex-direction: column;
 	}
 		
 }
@@ -6697,7 +6717,7 @@ width: 100%;
 		font-size: 30px;
 	}
 	.p-style{
-		font-size: 14px;
+		font-size: 12px;
 	}
 	.d-f{
 		flex-direction: column;
@@ -6706,7 +6726,13 @@ width: 100%;
 		flex-wrap: wrap; 
 	  }
 	  .medium-title-oswald{
-		font-size: 18px;
+		font-size: 15px;
+	}
+	.f-r{
+		flex-direction: column;
+	}
+	.xmedium-title-oswald{
+		font-size: 25px;
 	}
 		
 }
